--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id=4e8fe175c646665b6176
+github.client.secret=e81d954bb278818f7724e360d7b4118a03ddd68b
+github.client.redirect_uri=http://localhost:8080/callback
