--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 github.client.id=4e8fe175c646665b6176
 github.client.secret=e81d954bb278818f7724e360d7b4118a03ddd68b
 github.client.redirect_uri=http://localhost:8080/callback
+
+#mybatis
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=wmn
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
